<resources>
    <string name="app_name">Xenzen</string>
    <string name="app_logo">Xenzen</string>
    <string name="foreign_name">森森</string>
    <string name="user_hint">Enter Username</string>
    <string name="pass_hint">Enter Password</string>
    <string name="first_time">First Time Signing In?</string>
    <string name="register">Register Here</string>
    <string name="login">LOG IN</string>
    <string name="createAccount"> CREATE ACCOUNT</string>
    <string name="phoneHint">Enter Phone Number</string>
    <string name="emailHint">Enter Email</string>
    <string name="rePassword">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="happyMood">Happy</string>
    <string name="sadMood">Sad</string>
    <string name="angryMood">Angry</string>
    <string name="content">Content</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>