<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/main_container"
    tools:context=".MainMenu">





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/add_fab"
        app:layout_anchor="@id/bottomAppBar" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="Welcome, User!"
        android:textAlignment="center"
        android:textColor="#303637"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        app:backgroundTint="@color/colorPrimaryDark"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/happyButton"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/gradientmood"
        android:fontFamily="@font/roboto"
        android:text="@string/happyMood"
        android:textColor="#295D8A"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sadButton"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="175dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/gradientmood"
        android:text="@string/sadMood"
        android:textColor="#295D8A"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/angryButton"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="365dp"
        android:background="@drawable/gradientmood"
        android:text="@string/angryMood"
        android:textColor="#295D8A"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contentButton"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="365dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/gradientmood"
        android:text="@string/content"
        android:textColor="#295D8A"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="600dp"
        android:fontFamily="@font/roboto"
        android:text="Please select a mood to get started."
        android:textAlignment="center"
        android:textColor="#303637"
        android:textSize="24sp"
        android:textStyle="bold" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>